--- a/sass/plugins.sass
+++ b/sass/plugins.sass
@@ -1,3 +1,4 @@
 @import ../bower_components/bootstrap-sass/assets/stylesheets/bootstrap
+@import ../bower_components/components-font-awesome//scss/fontawesome
 @import url('https://fonts.googleapis.com/css?family=Baumans')
 @import url('https://fonts.googleapis.com/css?family=Open+Sans')
