--- a/sass/organisms/_footer.sass
+++ b/sass/organisms/_footer.sass
@@ -8,19 +8,41 @@ footer
 			display: inline-block
 
 	.apresentacao
-		padding: 10px 50% 10px 50px
+		padding: 10px 60% 10px 50px
 		h1
-			font-size: 20px
+			font-size: 22px
 			font-family: Baumans
+			
 		p
+			font-size: 14px
 
 	.logo-rodape
+		float: right
+		margin: -110px 20px 0px 0px
 		img
 			width: 140px
 			height: 128px
 
-	.direitos-autorais
-		float: left
+	.rodape-final
+		background-color: $branco
 		font-size: 12px
-		text-align: center
-		.icones
+		margin-top: 10px
+		margin-bottom: 50px
+		.direitos-autorais, .termos-privacidade
+			display: inline-block
+		.direitos-autorais
+			margin-left: 50px
+			float: left
+			text-align: left
+			li
+				display: inline-block
+		.termos-privacidade
+			float: right
+			margin-right: -30px
+			li
+				display: inline-block
+				background-color: $branco
+				text-align: right
+				margin-left: 15px
+
+				a
