Finalizado o layout do HOME com o form de pesquisa

--- a/sass/organisms/_footer.sass
+++ b/sass/organisms/_footer.sass
@@ -1,11 +1,12 @@
 footer
 	background-color: $verde-claro
 	color: $verde-escuro
+	margin-top: 150px
 
 	.apresentacao,
-		.logo-rodape,
-			img
-			display: inline-block
+	.logo-rodape,
+	img
+		display: inline-block
 
 	.apresentacao
 		padding: 10px 60% 10px 50px
@@ -38,7 +39,7 @@ footer
 				display: inline-block
 		.termos-privacidade
 			float: right
-			margin-right: -30px
+			margin-right: -110px
 			li
 				display: inline-block
 				background-color: $branco
@@ -46,3 +47,5 @@ footer
 				margin-left: 15px
 
 				a
+					&:visited
+						color: $verde-escuro
