--- a/sass/plugins.sass
+++ b/sass/plugins.sass
@@ -1,6 +1,8 @@
 @import ../bower_components/bootstrap-sass/assets/stylesheets/bootstrap
 @import ../bower_components/components-font-awesome/scss/fontawesome
 @import ../bower_components/components-font-awesome/scss/fa-solid
+@import ../bower_components/components-font-awesome/scss/variables
+@import ../bower_components/components-font-awesome/scss/icons
 
 @import url('https://fonts.googleapis.com/css?family=Baumans')
 @import url('https://fonts.googleapis.com/css?family=Open+Sans')
