MUDANDO A COR DO BOTÃO DE BUSCA

--- a/sass/organisms/_main.sass
+++ b/sass/organisms/_main.sass
@@ -18,10 +18,21 @@ section.busca
 			margin-top: -5px
 			color: $verde-escuro
 			background-color: $verde-claro
-
 			&:hover
 				background-color: $verde-escuro
 				color: $verde-claro
+			&:active
+				background-color: $verde-claro
+				color: $preto
+			&:active:after
+				backgroud-color: $verde-escuro
+				color: $branco
+			&:focus
+				background-color: $verde-escuro
+				color: $branco
+			&:click
+				background-color: $verde-claro
+				color: $branco
 
 	
 			
