Finalização da estilização de cores do botão de busca

--- a/sass/organisms/_main.sass
+++ b/sass/organisms/_main.sass
@@ -21,18 +21,17 @@ section.busca
 			&:hover
 				background-color: $verde-escuro
 				color: $verde-claro
-			&:active
-				background-color: $verde-claro
-				color: $preto
-			&:active:after
-				backgroud-color: $verde-escuro
-				color: $branco
 			&:focus
 				background-color: $verde-escuro
 				color: $branco
-			&:click
-				background-color: $verde-claro
-				color: $branco
+			&:focus:hover
+				background-color: $verde-escuro
+				color: $verde-claro
+		.btn
+			&:active
+				background-color: $branco
+				color: $verde-escuro
+			
 
 	
 			
