--- a/sass/organisms/_footer.sass
+++ b/sass/organisms/_footer.sass
@@ -1,4 +1,6 @@
 footer
+
+
 	background-color: $verde-claro
 	color: $verde-escuro
 	margin-top: 150px
@@ -12,7 +14,7 @@ footer
 		padding: 10px 60% 10px 50px
 		h1
 			font-size: 22px
-			font-family: Baumans
+			font-family: "Bauhaus 93"
 			
 		p
 			font-size: 14px
