--- a/sass/plugins.sass
+++ b/sass/plugins.sass
@@ -2,10 +2,10 @@
 @import ../bower_components/components-font-awesome/scss/variables
 @import ../bower_components/components-font-awesome/scss/fontawesome
 @import ../bower_components/components-font-awesome/scss/fa-solid
-@import ../bower_components/components-font-awesome/scss/fa-regular
-@import ../bower_components/components-font-awesome/scss/fa-brands
+
 
 
 
 @import url('https://fonts.googleapis.com/css?family=Baumans')
 @import url('https://fonts.googleapis.com/css?family=Open+Sans')
+@include font-face(Bauhaus+93, ../webfonts/BAUHS93, 500, normal, ttf)
