Início da produção do Carousel

--- a/sass/organisms/_main.sass
+++ b/sass/organisms/_main.sass
@@ -24,9 +24,11 @@ section.busca
 			&:focus
 				background-color: $verde-escuro
 				color: $branco
-		.btn
+		btn.
 			&:active
 				background-color: $branco
 				color: $verde-escuro
-
+	
 section.ad
+	.propagandas
+		margin-top: 50px
