--- a/sass/plugins.sass
+++ b/sass/plugins.sass
@@ -1,11 +1,11 @@
 @import ../bower_components/bootstrap-sass/assets/stylesheets/bootstrap
 @import ../bower_components/components-font-awesome/scss/variables
 @import ../bower_components/components-font-awesome/scss/fontawesome
-@import ../bower_components/components-font-awesome/scss/fa-solid
 
 
 
 
-@import url('https://fonts.googleapis.com/css?family=Baumans')
+
+
 @import url('https://fonts.googleapis.com/css?family=Open+Sans')
-@include font-face(Bauhaus+93, ../webfonts/BAUHS93, 500, normal, ttf)
+@include font(Bauhaus+93, /webfonts/BAUHS93, 500, normal, ttf)
