Início da criação da página de resultado de pesquisa de documentos

--- a/sass/organisms/_busca.sass
+++ b/sass/organisms/_busca.sass
@@ -1,19 +1,21 @@
+
 section.logo
 	.logo-main
-		margin-top: 10px
-		margin-botton: 10px
-		text-align: center
+		margin-top: -15px
+		margin-botton: 0px
+		float: left
 		img
-			width: 340px
-			height: 300px
+			width: 100px
+			
 
 section.busca
 	form
 		text-align: center
+		margin-top: 40px
 		input,button
 			display: inline-block
 		input
-			width: 400px
+			width: 600px
 		button
 			margin-top: -5px
 			color: $verde-escuro
@@ -28,7 +30,25 @@ section.busca
 			&:active
 				background-color: $branco
 				color: $verde-escuro
+
+section.resultado-busca
+	h1
+		font-size: 22px
+		font-family: "Bauhaus 93"
+		color: $verde-escuro
+		text-align: center
+	p
+		font-size: 14px
+		color: $verde-escuro
+		font-weight: $bold
+		text-align: center
 	
 section.ad
 	.propagandas
 		margin-top: 50px
+
+section.resultado-busca
+	.lista
+		margin-top: 100px
+
+
