--- a/sass/plugins.sass
+++ b/sass/plugins.sass
@@ -8,4 +8,5 @@
 
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans')
-@include font(Bauhaus+93, /webfonts/BAUHS93, 500, normal, ttf)
+//@include font(Bauhaus+93, /webfonts/BAUHS93, 500, normal, ttf)
+//@include font(Bauhaus93, /webfonts/BAUHS93)
