Termino do designer da página de resultado de busca + Término do data-togle de confirmação de dados

--- a/sass/molecules/_reset.sass
+++ b/sass/molecules/_reset.sass
@@ -27,6 +27,10 @@ a
     text-decoration: none !important
     font-weight: $bold
     color: $verde-escuro !important
+  &:visited
+    text-decoration: none !important
+    color: $verde-escuro !important
+
 
 nav
   a
@@ -57,3 +61,17 @@ q
 table
   border-collapse: collapse
   border-spacing: 0
+
+button
+      margin-top: -5px
+      color: $verde-escuro
+      background-color: $verde-claro
+      &:hover
+        background-color: $verde-escuro
+        color: $verde-claro
+      &:focus
+        background-color: $verde-escuro
+        color: $branco
+      &:active
+        background-color: $branco
+        color: $verde-escuro
