--- a/sass/organisms/_busca.sass
+++ b/sass/organisms/_busca.sass
@@ -40,8 +40,60 @@ section.resultado-busca
 	p
 		font-size: 14px
 		color: $verde-escuro
-		font-weight: $bold
+		//font-weight: $bold
+		//text-align: center
+		
+	.titulos-gerais
 		text-align: center
+		font-weight: $bold
+			
+	.titulo
+		background-color: $verde-escuro
+		color: $branco
+		font-weight: $bold
+		height: 50px
+		justify-content: center
+		align-items: center
+		.col-sm-8
+			border-left: solid
+			border-color: $branco
+			height: 50px
+			padding: 15px
+		.col-sm-4
+			padding: 15px
+	.conteudo
+		background-color: $verde-claro
+		color: $verde-escuro
+		height: 50px
+		justify-content: center
+		align-items: center
+		.col-sm-8
+			border-left: solid
+			border-color: $branco
+			height: 50px
+			padding: 15px
+		.col-sm-4
+			padding: 15px
+	
+	.modal-title
+		font-weight: $bold
+		color: $verde-escuro
+
+	button
+		margin-top: -5px
+		color: $verde-escuro
+		background-color: $verde-claro
+		&:hover
+			background-color: $verde-escuro
+			color: $verde-claro
+		&:focus
+			background-color: $verde-escuro
+			color: $branco
+	.btn
+		&:active
+			background-color: $branco
+			color: $verde-escuro
+		
 	
 section.ad
 	.propagandas
